--- a/client/less/theme.less
+++ b/client/less/theme.less
@@ -30,7 +30,7 @@
 .favorite,
 .favorite:hover
 {
-    color: #f90;
+    color: #f90 !important;
 }
 
 // Alerts
@@ -91,6 +91,11 @@
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     color: #FFF;
     border-color: #262626 #222222 #000;
+}
+
+.btn-inverse:focus, .btn-inverse:active
+{
+    color: #FFF;
 }
 
 .btn:focus
